<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/lightBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/git_hub_search_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        style="@style/AppTheme"
        app:titleTextColor="@color/white"
        android:background="@drawable/toolbar_colors"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageButton
            android:id="@+id/closeAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_mar"
            android:background="@drawable/ic_exit_to_app_24dp"
            android:layout_gravity="end"
            android:contentDescription="@string/buttonquitapplication" />

    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/button_search"
        app:layout_goneMarginTop="@dimen/standard_mar"
        android:layout_marginStart="@dimen/standard_mar"
        android:layout_marginEnd="@dimen/standard_mar"
        android:layout_marginTop="@dimen/standard_mar"
        android:layout_marginBottom="@dimen/standard_mar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search_text"
        android:textColor="#FFFFFF"
        android:background="@drawable/search_button_corners_and_colors"
        app:layout_constraintStart_toEndOf="@id/searchEditText"
        app:layout_constraintBottom_toBottomOf="@id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchEditText"
        />

    <EditText
        android:id="@+id/searchEditText"
        android:inputType="text"
        android:layout_marginTop="@dimen/standard_mar"
        android:layout_marginStart="@dimen/standard_mar"
        android:layout_marginEnd="@dimen/standard_mar"
        android:layout_marginBottom="@dimen/standard_mar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/git_hub_search_toolbar"
        app:layout_constraintEnd_toStartOf="@id/button_search"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        android:hint="@string/type_repo_name_here"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/edit__text_search_corners_and_colors"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/git_repo_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        android:layout_marginStart="@dimen/standard_mar"
        android:layout_marginEnd="@dimen/standard_mar"
        android:layout_marginTop="@dimen/standard_mar"
        android:layout_marginBottom="@dimen/standard_mar"

        />


    <ProgressBar
        android:id="@+id/git_hub_search_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/git_hub_search_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_mar"
        android:text="@string/git_hub_search_error_message"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/git_hub_try_again_button"/>

    <Button
        android:id="@+id/git_hub_try_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/try_again"
        android:background="@drawable/try_again_button_corners_and_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/git_hub_search_error_message_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_mar"
        android:textAlignment="center"
        android:text="@string/git_hub_search_error_message_cases"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/git_hub_try_again_button"

        />



    <android.support.constraint.Group
        android:id="@+id/Git_hub_search_error_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="git_hub_search_error_message,git_hub_try_again_button,git_hub_search_error_message_cases" />

</android.support.constraint.ConstraintLayout>